k8s/chrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-chrome
  namespace: linda
  labels:
    app: headless-chrome
spec:
  selector:
    app: headless-chrome
  ports:
    - port: 9222
      targetPort: 9222
      protocol: TCP
  type: ClusterIP
