k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linda-frontend-service
  namespace: linda
  labels:
    app: linda-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: linda-frontend
